next challenges lock et boutton back pour les challenges

--- a/app/assets/stylesheets/challenges/_index.scss
+++ b/app/assets/stylesheets/challenges/_index.scss
@@ -1,20 +1,2 @@
 @import "show";
-
-.challenges a {
-  text-decoration: none;
-  color: unset;
-}
-
-.text-new-challenge p {
-  text-align: center;
-  font-size: 1em;
-  margin: 17px 0px 0px;
-}
-.text-new-challenge h4 {
-  text-align: center;
-  margin: 0.7em 0em 0em;
-}
-
-.challenges {
-  margin-bottom: 2em;
-}
+@import "indexchallenges";
