--- a/app/views/seniorities/index.html.erb
+++ b/app/views/seniorities/index.html.erb
@@ -9,7 +9,7 @@
 
 <div class="container-nav">
   <%= link_to profile_path do %>
-    <p class="profile-text"><i class="fa-solid fa-arrow-left green"></i>  Go back to profile</p>
+    <p><i class="fa-solid fa-arrow-left green"></i>  Back to profile</p>
   <% end %>
   <section class="seniorities">
     <% @seniorities.each do |seniority| %>
