--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -11,7 +11,7 @@
 
 <div class="container-nav">
   <div class="activity-report">
-    <h2>Hello <%= current_user.seniority.name %>! <i class="fa-solid <%= seniority_icons(current_user.seniority.name.gsub(' ','-').downcase) %>"></i></h2>
+    <h2>You are a <%= current_user.seniority.name %>! <i class="fa-solid <%= seniority_icons(current_user.seniority.name.gsub(' ','-').downcase) %>"></i></h2>
     <%= link_to seniorities_path do %>
       <div class="profile-cards green-card" id="seniority">
         <div class="progress">
@@ -20,7 +20,7 @@
         <% if @next_seniority.nil? %>
           <p>You are an amazing eco citizen! </p>
         <% else %>
-          <p><strong>Level: </strong><%= @remaining %>% remaining to become the <%= @next_seniority.name %>.</p>
+          <p><strong>Level: </strong><%= @remaining %>% remaining to become a <%= @next_seniority.name %>.</p>
         <% end %>
         <i class="fa-solid fa-arrow-right white" id="arrow-seniority"></i>
       </div>
@@ -69,7 +69,7 @@
 
   <ul class="cards">
     <% @events.each do |event| %>
-      <li class="card card-scroll">
+      <li class="card card-scroll card-scroll-events">
         <p><strong><%= event.title %></strong></p>
         <p><%= event.date.strftime("%-d %b %Y") %></p>
         <p><%= event.address %></p>
@@ -85,11 +85,11 @@
   </div>
 
   <ul class="cards">
-    <li class="card card-scroll">
+    <li class="card card-scroll card-scroll-tips">
       <p><strong><%= @tip.name %></strong></p>
       <p>"<%= @tip.description %>"</p>
     </li>
-    <li class="card card-scroll">
+    <li class="card card-scroll card-scroll-tips">
       <p><strong><%= @usertip.name %></strong></p>
       <p>"<%= @usertip.description %>"</p>
     </li>
