added some polish on specific elements

--- a/app/assets/stylesheets/challenges/_show.scss
+++ b/app/assets/stylesheets/challenges/_show.scss
@@ -40,6 +40,10 @@
   --bs-progress-bar-color: #fff;
   border-radius: 50px;
   background-color: #f9f9f1;
-  height: 25px;
+  height: 32px;
   box-shadow: 0 0 15px rgba(0,0,0,0.4);
+}
+
+#text-progress {
+  font-size: 1.25rem;
 }
