--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -35,6 +35,17 @@
   border-radius: 50%;
 }
 
+#ranking {
+  border: light;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #115549;
+  font-size: 1.85rem;
+  color: white;
+  padding: 6px;
+}
+
 .header-no-avatar {
   padding: 0.75rem;
   background-color: #115549;
