--- a/app/views/seniorities/index.html.erb
+++ b/app/views/seniorities/index.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="title-avatar">
     <h1>Levels</h1>
-    <i class="fa-solid fa-ranking-star"></i>
+    <i class="fa-solid fa-ranking-star" id="ranking"></i>
     <%# <%= image_tag current_user.avatar %>
   </div>
   <p>Complete 5 challenges to unlock the next level.</p>
