--- a/app/assets/stylesheets/components/_card_challenge.scss
+++ b/app/assets/stylesheets/components/_card_challenge.scss
@@ -37,13 +37,13 @@
   font-size: 25px;
 }
 .card-challenge .food-icon {
-  background-color: #edc306;
+  background-color: #FD841F;
 }
 .card-challenge .transport-icon {
   background-color: #0c69db;
 }
 .card-challenge .energy-icon {
-  background-color: #ee6700;
+  background-color: #CD104D;
 }
 .card-challenge .waste-icon {
   background-color: darkgreen;
