--- a/app/assets/stylesheets/components/_cardtips.scss
+++ b/app/assets/stylesheets/components/_cardtips.scss
@@ -77,36 +77,36 @@
 }
 
 .cardtips .food-icon i {
-  color: #f6d029;
+  color: #FD841F;
 }
 .cardtips .transport-icon i {
   color: #0c69db;
 }
 .cardtips .energy-icon i {
-  color: #ee6700;
+  color: #CD104D;
 }
 .cardtips .waste-icon i {
   color: darkgreen;
 }
 .cardtips .purchase-icon i {
-  color: #f5aee1;
+  color: #5e1e4c;
 }
 
 i.food-icon.tipsimage.fa-solid {
-  color: #f6d029;
+  color: #FD841F;
 }
 
 i.transport-icon.tipsimage.fa-solid {
   color: #0c69db;
 }
 i.energy-icon.tipsimage.fa-solid {
-  color: #ee6700;
+  color: #CD104D;
 }
 i.waste-icon.tipsimage.fa-solid {
   color: darkgreen;
 }
 i.purchase-icon.tipsimage.fa-solid {
-  color: #f5aee1;
+  color: #5e1e4c;
 }
 
 .challenge-description p {
