--- a/app/views/pages/profile_tips.html.erb
+++ b/app/views/pages/profile_tips.html.erb
@@ -1,12 +1,12 @@
 <div class="header header-green">
   <div class="title-avatar">
     <h1>My tips</h1>
-    <img src="<%= current_user.avatar %>" alt="">
+    <i class="fa-regular fa-lightbulb"></i>
     </div>
     <p>Tips you need to remember! 📝 </p>
   </div>
 
-<div class="container-non" data-controller="tips-card">
+<div class="container-non" data-controller="tips-card" style="padding-bottom: 180px">
   <div class="accordion" id="accordionPanelsStayOpen-tip">
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne-tip">
