--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="title-avatar">
     <h1>All tips</h1>
-    <%= image_tag current_user.avatar %>
+    <i class="fa-regular fa-lightbulb" id="lightclub"></i>
   </div>
   <p>Find the perfect tips 💡 to complete your challenges</p>
 </div>
