--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -59,3 +59,14 @@
   justify-content: center;
   align-items: center;
 }
+
+#lightclub {
+  border: light;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #115549;
+  font-size: 2rem;
+  color: white;
+  padding: 7px;
+}
