--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 0.5rem 0.5rem 0.5rem;
-  align-items: baseline;
+  align-items: center;
 }
 
 .title-avatar img {
