--- a/app/assets/stylesheets/components/_navbar_eco.scss
+++ b/app/assets/stylesheets/components/_navbar_eco.scss
@@ -5,16 +5,22 @@
   border-radius: 30px 30px 0 0;
   border-bottom: white;
   a.nav-link {
-    padding: 0;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #a3baa3;
     &.current-page {
-      border-bottom: solid 3px;
-      border-color: #125549;
-      color: #125549;
+      background-color: #125549;
+      color: white;
     }
   }
-  li.nav-item.me-3.me-lg-0 {
-    font-size: 30px;
-
+  i.fa-solid {
+    font-size: 2rem;
+  }
+  i.fa-regular {
+    font-size: 2rem;
   }
 }
