--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -20,6 +20,9 @@
                   legend_tag: false,
                   as: :check_boxes,
                   collection: @categories,
+                  wrapper_html: {
+                    class: 'd-flex flex-wrap justify-content-center'
+                  },
                   input_html: {
                     class: "tag-selector",
                     data: {
