event clickable et container adapter à la nouvelle navbar

--- a/app/assets/stylesheets/components/_card_challenge.scss
+++ b/app/assets/stylesheets/components/_card_challenge.scss
@@ -43,7 +43,7 @@
   background-color: #0c69db;
 }
 .card-challenge .energy-icon {
-  background-color: #CD104D;
+  background-color: #ca0a0f;
 }
 .card-challenge .waste-icon {
   background-color: darkgreen;
