--- a/app/assets/stylesheets/components/_cardtips.scss
+++ b/app/assets/stylesheets/components/_cardtips.scss
@@ -100,7 +100,7 @@ i.transport-icon.tipsimage.fa-solid {
   color: #0c69db;
 }
 i.energy-icon.tipsimage.fa-solid {
-  color: #CD104D;
+  color: #ca0a0f
 }
 i.waste-icon.tipsimage.fa-solid {
   color: darkgreen;
