--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="title-avatar">
     <h1>New challenges</h1>
-    <img src="<%= current_user.avatar %>" alt="">
+    <i class="fa-solid fa-dumbbell" id="dumbbell"></i>
   </div>
   <p>Choose some challenges for this week</p>
 </div>
