--- a/app/views/shared/_navbar_eco.html.erb
+++ b/app/views/shared/_navbar_eco.html.erb
@@ -1,5 +1,5 @@
 <div class="fixed-bottom align-items-center">
-  <nav id= navbareco class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav id= navbareco class="navbar">
     <div class="w-100">
       <ul class="navbar-nav d-flex flex-row justify-content-around">
         <!-- Icons -->
