--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -81,3 +81,14 @@
   color: white;
   padding: 7px;
 }
+
+#dumbbell {
+  border: light;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #115549;
+  font-size: 2rem;
+  color: white;
+  padding: 7px;
+}
