--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -3,10 +3,10 @@
     <h1>My challenges</h1>
     <i class="fa-solid fa-dumbbell"></i>
   </div>
-  <p>Yes you can! 💪 Stay motivated <%= current_user.username %> 🏋️‍♀️ </p>
+  <p>Yes you can! 💪 Stay motivated 🏋️‍♀️ </p>
 </div>
 
-<div class="accordion" id="accordionPanelsStayOpen-challenge" style="padding-bottom: 135px">
+<div class="accordion" id="accordionPanelsStayOpen-challenge" style="padding-bottom: 180px">
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
