--- a/app/assets/stylesheets/components/_cardtips.scss
+++ b/app/assets/stylesheets/components/_cardtips.scss
@@ -1,6 +1,6 @@
 .cardtips {
   overflow: hidden; // truncate
-  background-color: #EEE7D3;
+  background-color: #E3EAE3;
   box-shadow: 0 10px 15px rgba(0,0,0,0.25);
   border-radius: 10px;
   display: flex;
