--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -68,7 +68,7 @@
 }
 
 .card.card-scroll.card-scroll-tips {
-  background-color: #EEE7D3;
+  background-color: #E3EAE3;
 }
 
 .card.card-scroll-cat {
