--- a/app/assets/stylesheets/components/_cardtips.scss
+++ b/app/assets/stylesheets/components/_cardtips.scss
@@ -1,6 +1,7 @@
 .cardtips {
   overflow: hidden; // truncate
   background-color: #E3EAE3;
+  border: solid 1px #115549;
   box-shadow: 0 10px 15px rgba(0,0,0,0.25);
   border-radius: 10px;
   display: flex;
