--- a/app/views/pages/profile_tips.html.erb
+++ b/app/views/pages/profile_tips.html.erb
@@ -83,7 +83,7 @@
   </div>
 </div>
 
-<div class="btn-sticky-tips list-inline">
+<div class="btn-sticky-tips list-inline container-nav">
   <li class="list-inline-item">
     <%= link_to  new_usertip_path, class: "btn-create-tips" do %>
       <i class="fa-solid fa-plus"></i> My tip
