--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,6 +34,18 @@
 //   color: #fff;
 //   text-decoration: none;
 // }
+.btn-remember {
+  width: 1em;
+  height: 18px;
+  margin-top: 0.25em;
+  vertical-align: top;
+  background-color: #F4F4F4;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  appearance: none;
+}
 
 .form-check-input:checked {
   background-color: #115540;
@@ -55,7 +67,7 @@
 .btn-sticky-tips {
   left: 0;
   position: fixed;
-  bottom: 2rem;
+  bottom: 2.5rem;
   width: 100%;
   padding: 0.5rem 0.5rem 3rem 0.5rem;
   display: flex;
@@ -71,11 +83,13 @@
     justify-content: center;
     border-radius: 37px;
     font-size: 22px;
+
     &.btn-create-tips {
       background-color: white;
-      border: 2px solid #115540;
-      color: #115540;
-      padding-right: 2.5rem;
+      border: 2px solid #115549;
+      color: #115549;
+      padding: 1.5rem;
+      width: 172px;
     }
   }
 }
@@ -122,7 +136,22 @@
 i.fa-solid.fa-plus {
   padding-left: 15px;
   color: #115540;
-  /* background-color: #115540; */
   margin-right: 10px;
-  width: 52px;
+  width: 35px;
+  position: initial;
+  padding: unset;
+  margin: unset;
+  font-size: 20px;
+}
+
+#new_user {
+  .form-check-input { height: 1em }
+}
+
+.btn-redo {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  a {
+    color:white;
+  }
 }
