--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -18,14 +18,21 @@
       <div class="progress-bar progress-bar-goal" id="text-progress" role="progressbar" style="width: <%= @booking.goal %>%;" aria-valuenow="<%= @booking.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @booking.goal %>%</div>
     </div>
   </div>
-  <% if policy(@booking).destroy? %>
-      <p class="d-flex justify-content-around remove-challenge">
-        <%= link_to booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} do %>
-          <i class="fa-regular fa-trash-can"></i> I quit this challenge
-        <% end %>
-      </p>
+  <% if policy(@booking).destroy? && @booking.status == false%>
+    <p class="d-flex justify-content-around remove-challenge">
+      <%= link_to booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} do %>
+        <i class="fa-regular fa-trash-can"></i> I quit this challenge
+      <% end %>
+    </p>
+  <% elsif policy(@booking).edit? %>
+    <div class="btn-grad d-flex justify-content-around btn-redo">
+      <%= link_to challenge_path(@retry_challenge) do %>
+        <i class="fa-solid fa-repeat"></i> Redo this challenge
+      <% end %>
+    </div>
   <% end %>
-    <h4>Need some tips</h4>
+
+  <h4>Need some tips</h4>
 
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
@@ -74,15 +81,9 @@
     </div>
     <% end %>
   </ul>
-
   <div class="up-nav pb-4">
-    <% if @booking.status == false %>
-      <% if policy(@booking).edit? %>
-        <%= render "bookings/form", bookings: @booking %>
-      <% end %>
-
-    <% else %>
-      <%= link_to "Redo this challenge", challenge_path(@retry_challenge) %>
+    <% if policy(@booking).edit? && @booking.status == false %>
+      <%= render "bookings/form", bookings: @booking %>
     <% end %>
   </div>
 
