ok pour les bouttons

--- a/app/views/pages/profile_tips.html.erb
+++ b/app/views/pages/profile_tips.html.erb
@@ -90,7 +90,7 @@
   <li class="list-inline-item">
     <%#= link_to "Create a new tip", new_usertip_path, class: "btn-create-tips" %>
     <button type="button" class="btn btn-primary btn-create-tips" data-bs-toggle="modal" data-bs-target="#exampleModal-new">
-    create a new tip
+    <i class="fa-solid fa-plus"></i> My tip
     </button>
   </li>
   <li class="list-inline-item"><%= link_to "All tips", tipsindex_path, class: "btn btn-grad btn-prof-tips" %></li>
