--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -84,6 +84,22 @@
   padding: 26px 49px;
 }
 
+.btn-sticky-tips .btn-create-tips {
+  // margin-top: 10px;
+  padding: 10px 28px 10px 18px;
+  text-align: center;
+  // transition: 0.5s;
+  // background-size: 100% auto;
+  color: #115549;
+  box-shadow: 0 0 20px rgba(238, 238, 238, 0);
+  display: block;
+  background-color: white;
+  border:solid 1px #115549;
+  border-radius: 37px;
+  font-size: 22px;
+  width: 100%;
+}
+
 .form-check-label.collection_check_boxes {
   font-size: 20px;
 }
@@ -120,9 +136,6 @@
 }
 
 i.fa-solid.fa-plus {
-  padding-left: 15px;
   color: #115540;
-  /* background-color: #115540; */
-  margin-right: 10px;
   width: 52px;
 }
