--- a/app/views/pages/_tips_list.html.erb
+++ b/app/views/pages/_tips_list.html.erb
@@ -1,7 +1,9 @@
 
 <% tips&.each do |tip|  %>
     <div class="cardtips">
-      <i class="<%= tip.challenge.category.downcase %>-icon tipsimage fa-solid <%= find_icon(tip.challenge.category) %>"></i>
+      <div class="<%= tip.challenge.category.downcase %>-icon tipsimage">
+        <i class="fa-solid <%= find_icon(tip.challenge.category) %>"></i>
+      </div>
       <li>
         <h5><strong><%= tip.name %></strong></h5>
         <% if current_user.saved_tips.where(tip: tip).empty? %>
@@ -21,21 +23,23 @@
   <% end %>
   <% usertips&.each do |tip|  %>
     <div class="cardtips">
-      <i class="<%= tip.booking.challenge.category.downcase %>-icon tipsimage fa-solid <%= find_icon(tip.booking.challenge.category) %>"></i>
-        <li>
-          <h5><strong><%= tip.name %></strong></h5>
-          <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
-            <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
-              <i class="fa-regular fa-bookmark"></i>
-            <% end %>
-          <% else %>
-            <% sut = current_user.saved_user_tips.select{ |sut| sut if sut.usertip_id == tip.id } %>
-            <%= link_to saved_user_tip_path(sut), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
-              <i class="fa fa-bookmark"></i>
-            <% end %>
+      <div class="<%= tip.booking.challenge.category.downcase %>-icon tipsimage">
+        <i class="fa-solid <%= find_icon(tip.booking.challenge.category) %>"></i>
+      </div>
+      <li>
+        <h5><strong><%= tip.name %></strong></h5>
+        <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
+          <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
+            <i class="fa-regular fa-bookmark"></i>
           <% end %>
-          <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
-          <%# <p>Challenge category: <%= tip.booking.challenge.category  %>
+        <% else %>
+          <% sut = current_user.saved_user_tips.select{ |sut| sut if sut.usertip_id == tip.id } %>
+          <%= link_to saved_user_tip_path(sut), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
+        <% end %>
+        <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
+        <%# <p>Challenge category: <%= tip.booking.challenge.category  %>
       </li>
     </div>
   <% end %>
