--- a/app/assets/stylesheets/challenges/_show.scss
+++ b/app/assets/stylesheets/challenges/_show.scss
@@ -18,19 +18,19 @@
 }
 
 .head .food-icon i {
-  background-color: #f6d029;
+  background-color: #FD841F;
 }
 .head .transport-icon i {
   background-color: #0c69db;
 }
 .head .energy-icon i {
-  background-color: #ee6700;
+  background-color: #ca0a0f;
 }
 .head .waste-icon i {
   background-color: darkgreen;
 }
 .head .purchase-icon i {
-  background-color: #f5aee1;
+  background-color: #5e1e4c;
 }
 
 .progress-bar-goal {
