--- a/app/views/pages/_modal_edit.html.erb
+++ b/app/views/pages/_modal_edit.html.erb
@@ -16,7 +16,7 @@
               <%= f.input :booking_id, prompt: "Choose among your challenge", collection: @bookings.map{ |booking| [booking.id, booking.challenge.name] }, label_method: :second, value_method: :first %>
             </div>
             <div class="form-actions">
-              <%= f.submit class:'btn-grad mt-4' %>
+              <%= f.submit class:'btn-grad mt-4', value: "Update your tip" %>
             </div>
           </div>
         <% end %>
