--- a/app/assets/stylesheets/challenges/_show.scss
+++ b/app/assets/stylesheets/challenges/_show.scss
@@ -34,7 +34,7 @@
 }
 
 .progress-bar-goal {
-  background-color: #115549;
+  background-color: #1155499e !important;
 }
 .progress-goal {
   --bs-progress-bar-color: #fff;
