--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,7 +3,7 @@
   bottom: 81px;
   right: 0.75rem;
   z-index: 1000;
-  background-color: #a3baa3;
+  background-color: #6c757dcf;
   border: none;
-  color: rgb(50, 50, 50);
+  color: rgb(238, 237, 237);
 }
