--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -175,6 +175,12 @@ i.fa-solid.fa-plus {
 }
 
 #create-tip {
-  
+
   content: "Post your tip"
+}
+
+.btn-home {
+  width: 60%;
+  font-size: 18px;
+  padding: 10px;
 }
