--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h1>EcoCoach</h1>
 
     <p>Get a coach & stay motivated to act on climate change!</p>
-    <div class="btn btn-flat">
+    <div class="btn btn-grad btn-home">
       <% if user_signed_in? %>
         <%= link_to "Start the coaching", profile_path %>
       <% else %>
@@ -40,7 +40,7 @@
       <div class="carousel-item">
         <img src="/assets/tips.svg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
-          <h5>Get daily tips</h5>
+          <h5>Get weekly tips</h5>
         </div>
       </div>
     </div>
