--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -62,7 +62,7 @@
   </div>
 
   <div class="daily-tips">
-    <h2>Event this week</h2>
+    <h2>Events this week</h2>
     <%= link_to events_path do %>
       <p>See more <i class="fa-solid fa-arrow-right green"></i></p>
     <% end %>
