--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,7 @@
 @import "navbar";
 @import "banner";
 @import "button";
-@import "cardtips";
+@import "card_tips";
 @import "card_challenge";
 @import "navbar_eco";
 @import "font";
