--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -9,7 +9,6 @@
   padding: 1rem 2rem 2rem 2rem;
 }
 
-
 .green-card {
   background-color: #115549;
 }
@@ -169,10 +168,10 @@ section.challenges {
   padding-top: 1rem;
 }
 
-#plus-event {
-  font-size: 2rem;
+#eye-event {
+  font-size: 1.5rem;
   color: white;
   position: absolute;
-  bottom: 0.5rem;
-  right: 0rem;
+  bottom: 1rem;
+  right: 1rem;
 }
