--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -3,7 +3,7 @@
     <h1>New challenges</h1>
     <i class="fa-solid fa-dumbbell" id="dumbbell"></i>
   </div>
-  <p>Choose some challenges for this week</p>
+  <p>Choose some challenges 🏋️‍♀️ for this week.</p>
 </div>
 
 <div class="container-nav">
