--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div><%= render "bookings/form", bookings: @booking %></div>
 
-  <h4 class="mt-4">Need some tips</h4>
+  <h4 class="mt-4">Need some tips?</h4>
 
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
