--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
     <h1>Events</h1>
     <i class="fa-solid fa-calendar-days" id="calendar"></i>
   </div>
-  <p>What's are the event around me?</p>
+  <p><strong>What's are the event around me? 📅</strong></p>
 </div>
 
 <div class="container-nav">
