--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -75,7 +75,7 @@
         <p><%= event.date.strftime("%-d %b %Y") %></p>
         <p><%= event.address %></p>
         <%= link_to event.url do %>
-          <i class="fa-solid fa-plus" id="plus-event"></i>
+          <i class="fa-regular fa-eye" id="eye-event"></i>
         <% end %>
       </li>
     <% end %>
