--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -3,7 +3,7 @@
     <h1>My challenges</h1>
     <i class="fa-solid fa-dumbbell"></i>
   </div>
-  <p>Yes you can! 💪 Stay motivated 🏋️‍♀️ </p>
+  <p>Yes you can! 💪 Stay motivated! </p>
 </div>
 
 <div class="accordion" id="accordionPanelsStayOpen-challenge" style="padding-bottom: 180px">
