--- a/app/views/pages/tipsindex.html.erb
+++ b/app/views/pages/tipsindex.html.erb
@@ -3,7 +3,7 @@
     <h1>Find a tip</h1>
     <i class="fa-regular fa-lightbulb" id="lightclub"></i>
   </div>
-  <p>Perfect tips 💡 for your challenges</p>
+  <p><strong>Perfect tips 💡 for your challenges.</strong></p>
 </div>
 
 <div class="container-nav" data-controller="search-tips tips-card">
