--- a/app/views/seniorities/index.html.erb
+++ b/app/views/seniorities/index.html.erb
@@ -4,7 +4,7 @@
     <i class="fa-solid fa-ranking-star" id="ranking"></i>
     <%# <%= image_tag current_user.avatar %>
   </div>
-  <p><strong>Complete 5 challenges to unlock the next level.</strong></p>
+  <p><strong>Complete 5 challenges to unlock 🔓 the next level.</strong></p>
 </div>
 
 <div class="container-nav">
