--- a/app/assets/stylesheets/pages/_challenges_show.scss
+++ b/app/assets/stylesheets/pages/_challenges_show.scss
@@ -1,23 +1,53 @@
-.head {
-  .description {
-    padding: 0 1rem;
-    p {
-      text-align: center;
-    }
-  }
-}
-
-#new_booking {
-  li {
-    width: 100%;
-    text-align: center;
-    .booking-goal {
-      width: 100%;
-    }
-  }
-}
-
 .margin-b-show {
   margin-bottom: 10rem;
 }
 
+.details {
+  text-align: center;
+}
+
+.top-icon {
+  font-size: 3em;
+  margin: 0.5em;
+}
+.head .icons i {
+  border-radius: 50%;
+  height: 90px;
+  width: 90px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto 30px;
+}
+
+.head .food-icon i {
+  background-color: #FD841F;
+}
+.head .transport-icon i {
+  background-color: #0c69db;
+}
+.head .energy-icon i {
+  background-color: #ca0a0f;
+}
+.head .waste-icon i {
+  background-color: darkgreen;
+}
+.head .purchase-icon i {
+  background-color: #5e1e4c;
+}
+
+.progress-bar-goal {
+  background-color: #1155499e !important;
+}
+.progress-goal {
+  --bs-progress-bar-color: #fff;
+  border-radius: 50px;
+  background-color: #9ABDA4;
+  height: 32px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+}
+
+#text-progress {
+  font-size: 1.25rem;
+}
