--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -6,25 +6,26 @@
   <%= link_to profile_challenge_path do %>
     <p><i class="fa-solid fa-arrow-left green"></i> Back to My Challenges</p>
   <% end %>
-  <div class="mt-3 head">
+  <div class="mt-3 mb-4 head">
     <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons details">
       <i class="fa-solid <%= find_icon(Challenge.find(@booking.challenge_id).category) %> top-icon"></i>
     </div>
     <div class="challenge-description">
       <p><%= Challenge.find(@booking.challenge_id).description %></p>
     </div>
-    <h4 class="text-center">My goal for this week:</h4>
+  </div>
+  <% if policy(@booking).destroy? && @booking.status == false%>
+    <h4 class="text-center">My weekly goal was:</h4>
     <div class="progress progress-goal">
       <div class="progress-bar progress-bar-goal" id="text-progress" role="progressbar" style="width: <%= @booking.goal %>%;" aria-valuenow="<%= @booking.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @booking.goal %>%</div>
     </div>
-  </div>
-  <% if policy(@booking).destroy? && @booking.status == false%>
     <p class="d-flex justify-content-around remove-challenge">
       <%= link_to booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} do %>
         <i class="fa-regular fa-trash-can"></i> I quit this challenge
       <% end %>
     </p>
   <% elsif policy(@booking).edit? %>
+    <h4 class="text-center">Congratulations you completed this challenge! 🏅</h4>
     <div class="btn-grad d-flex justify-content-around btn-redo">
       <%= link_to challenge_path(@retry_challenge) do %>
         <i class="fa-solid fa-repeat"></i> Redo this challenge
@@ -32,7 +33,7 @@
     </div>
   <% end %>
 
-  <h4>Need some tips</h4>
+  <h4>Need some tips?</h4>
 
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
