change text modals

--- a/app/views/pages/_modal_edit.html.erb
+++ b/app/views/pages/_modal_edit.html.erb
@@ -11,7 +11,7 @@
         <%= simple_form_for(usertip) do |f| %>
           <div class="custom-form">
             <div class="form-inputs">
-              <%= f.input :name, autofocus: true, placeholder: "Name of your tip" %>
+              <%= f.input :name, label: "Title", autofocus: true, placeholder: "Title of your tip" %>
               <%= f.input :description, placeholder: "Describe your tip" %>
               <%= f.input :booking_id, prompt: "Choose among your challenge", collection: @bookings.map{ |booking| [booking.id, booking.challenge.name] }, label_method: :second, value_method: :first %>
             </div>
