--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,26 +18,26 @@
     <h1>How it works</h1>
   </div>
 
-  <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="false">
+  <div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+    <div class="carousel-inner" data-bs-interval="2000">
       <div class="carousel-item active">
         <img src="/assets/ecology.svg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
           <h5>Become an eco-citizen</h5>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="/assets/challenges.svg" class="d-block w-100" alt="...">
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="/assets/challenges.svg" class="d-block w-100" alt="..." >
         <div class="carousel-caption d-md-block">
           <h5>Challenge yourself</h5>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="2000">
         <img src="/assets/tips.svg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-md-block">
           <h5>Get weekly tips</h5>
